Fri Feb 18 12:59:16 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: more cleanup, bug fix on monitoring
	  missing files.
	* python/tests/Makefile.am python/tests/dnotify5.py: added
	  a specific test.
	  
Thu Feb 17 17:15:31 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c server/gam_poll.c: removing bugs,
	  did I say that I hate DNotify ?
	* python/tests/Makefile.am python/tests/dnotify*.py: more
	  tests and fixes

Thu Feb 17 12:46:06 CET 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in libgamin/gam_api.c libgamin/gam_data.c
	  libgamin/gam_protocol.h libgamin/gamin_sym.version
	  server/gam_debugging.[ch] server/Makefile.am: adding a
	  debugging infrastructure where some server internal events
	  can be reported to the client. This is only compiled if 
	  configured with --enable-debug-api, cleaned bup some configure.in
	  bugs
	* server/gam_dnotify.c: plugged DNotify in the debugging framework
	* python/gamin.c python/gamin.py: added python support for the
	  debugging framework
	* python/tests/Makefile.am python/tests/dnotify.py 
	  python/tests/dnotify2.py: started to add regression testing
	  for checking DNotify behaviour when debugging framework is activated.

Wed Feb 16 15:26:08 CET 2005 Daniel Veillard <veillard@redhat.com>

	* python/tests/level.py: reproduced the damn "Desktop doesn't refresh"
	  bug
	* server/gam_poll.c: fix fo the bug

Tue Feb 15 15:40:31 CET 2005 Daniel Veillard <veillard@redhat.com>

	* python/gamin.py: allow multiple monitoring of the same
	  file or dir in a given monitor
	* python/tests/Makefile.am python/tests/level.py
	  python/tests/multiple3.py: more tests

Tue Feb 15 12:57:05 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c server/gam_subscription.[ch]: cleaning up
	  the server code, a number of bug fixes
	* python/tests/Makefile.am python/tests/*.py: adding a bunch of
	  new tests
