@@ -1,3 +1,8 @@
+Fri Feb 18 14:36:38 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* python/tests/Makefile.am python/tests/dnotify[67].py: added
+	  more complex dnotify tests
+
 Fri Feb 18 12:59:16 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* server/gam_poll.c: more cleanup, bug fix on monitoring
